--- a/Contents/SlideShow.css
+++ b/Contents/SlideShow.css
@@ -1,9 +1,10 @@
 /* Customize Slideshow Container */
 .slideshow-container {
-    max-width: 800px; /* Adjust maximum width */
+    max-width: 80%; /* Adjust maximum width */
     margin: 0 auto; /* Center the slideshow */
     position: relative;
     overflow: hidden;
+    padding-top: 1%;
 }
 
 /* Customize Previous and Next Buttons */
@@ -14,14 +15,15 @@
     transform: translateY(-50%);
     width: auto;
     padding: 16px;
-    color: white;
+    color: #fff;
     font-weight: bold;
     font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
     transition: background-color 0.3s;
 }
 
 .prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .prev {
@@ -37,7 +39,7 @@
     cursor: pointer;
     height: 15px;
     width: 15px;
-    margin: 0 2px;
+    margin: 0 5px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
@@ -50,10 +52,12 @@
 
 /* Customize Caption Text Styling */
 .text {
-    color: #f2f2f2;
+    color: #fff;
     font-size: 20px;
     position: absolute;
     bottom: 8px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     text-align: center;
     padding: 8px;
