--- a/Contents/SlideShow.css
+++ b/Contents/SlideShow.css
@@ -20,7 +20,7 @@
     font-size: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     transition: background-color 0.3s;
-}
+}r 
 
 .prev:hover, .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
