--- a/Contents/Footer.css
+++ b/Contents/Footer.css
@@ -1,8 +1,12 @@
 /* Footer Styles */
 .footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: #333;
-    color: #fff;
-    padding: 30px 0;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
 }
 
 .footer-container {
@@ -34,6 +38,7 @@
     text-align: center;
     padding-top: 20px;
     background-color: #222;
+    margin-bottom: 5px;
 }
 
 .footer-bottom p {
