--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@
 #total-price-container {
     margin-top: 20px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 /* Styling for headings within select containers */
