--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     border: 3px solid #fff;
 }
 
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Full viewport height */
+}
+
 .banner {
     padding-left: 5%;
     padding-right: 5%;
